# paymesh-casper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Odra.toml  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/public/: slides.html  thumbnail.html
dashboard/src/: App.tsx  api.ts  styles.css  types.ts
demo/: consumer_agent.py  provider_agent.py  run_demo.py  serve_demo.py
docs/: README.md  api-reference.md  architecture.md  deployment.md  roadmap.md  sdk-guide.md  smart-contracts.md  x402-payments.md
docs/assets/: diagrams.md
keys/: account_info.json  deployer_secret_key.pem  deployment_results.json  secret_key.pem
scripts/: check_balance.py  deploy.py  deploy_remaining.py  deploy_reputation.py  gen_keys.py  query_contracts.py  test_deploy.py
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/paymesh/: __init__.py  backends.py  casper_client.py  client.py  models.py
sdk/python/tests/: test_sdk.py
src/: lib.rs  paymesh_tests.rs  reputation.rs  service_registry.rs  settlement.rs  shared.rs  staking.rs
wasm/: Reputation.wasm  ServiceRegistry.wasm  Settlement.wasm  Staking.wasm
x402/: __init__.py  client.py  crypto.py  demo_endpoints.py  encoding.py  facilitator.py  ledger.py  node.py  observe_endpoints.py  provider.py  types.py
(+17 files in other folders)
