[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paymesh"
version = "1.0.0"
description = "Typed SDK for PayMesh — the x402 agent marketplace on Casper"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PayMesh" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "requests>=2.31",
    "pydantic>=2.5",
    "cryptography>=42",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["paymesh*"]
